--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,12 +1,7 @@
 idf_component_register(
     SRCS 
         "main.cpp" 
-        "example/lorawan/CounterStatistics.cpp" 
-        "example/lorawan/CounterStatistics.h" 
-        "example/lorawan/SCExampleLorawanTask.cpp" 
-        "example/lorawan/SCExampleLorawanTask.h" 
-        "example/lorawan/SCExampleLauncher.cpp" 
-        "example/lorawan/SCExampleLauncher.h" 
-    REQUIRES os sys lorawan fmt nlohmann_json
-       
+        "example/starter_example/starter_example.cpp" 
+        "example/starter_example/starter_example.h" 
+    REQUIRES smooth
 )
