--- a/main/example/fmt/CMakeLists.txt
+++ b/main/example/fmt/CMakeLists.txt
@@ -1,9 +1,10 @@
 idf_component_register(
+    
     SRCS 
         "main.cpp" 
         "example/fmt/ExampleFmt.cpp" 
         "example/fmt/ExampleFmt.h" 
         
-    REQUIRES os sys lorawan fmt nlohmann_json
+    REQUIRES fmt
         
 )
