--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,10 @@
 idf_component_register(
+    
     SRCS 
         "main.cpp" 
-        "example/starter_example/starter_example.cpp" 
-        "example/starter_example/starter_example.h" 
-    REQUIRES smooth
+        "example/fmt/ExampleFmt.cpp" 
+        "example/fmt/ExampleFmt.h" 
+        
+    REQUIRES fmt
+        
 )
