--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,10 +1,12 @@
 idf_component_register(
-    
     SRCS 
         "main.cpp" 
-        "example/fmt/ExampleFmt.cpp" 
-        "example/fmt/ExampleFmt.h" 
-        
-    REQUIRES fmt
-        
+        "example/lorawan/CounterStatistics.cpp" 
+        "example/lorawan/CounterStatistics.h" 
+        "example/lorawan/SCExampleLorawanTask.cpp" 
+        "example/lorawan/SCExampleLorawanTask.h" 
+        "example/lorawan/SCExampleLauncher.cpp" 
+        "example/lorawan/SCExampleLauncher.h" 
+    REQUIRES os lorawan
+       
 )
