--- a/main/example/njson/CMakeLists.txt
+++ b/main/example/njson/CMakeLists.txt
@@ -4,6 +4,6 @@ idf_component_register(
         "example/njson/ExampleNJson.cpp" 
         "example/njson/ExampleNJson.h" 
 
-        REQUIRES nlohmann_json
+        REQUIRES nlohmann_json fmt
         
 )
