--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,12 +1,9 @@
 idf_component_register(
     SRCS 
         "main.cpp" 
-        "example/lorawan/CounterStatistics.cpp" 
-        "example/lorawan/CounterStatistics.h" 
-        "example/lorawan/SCExampleLorawanTask.cpp" 
-        "example/lorawan/SCExampleLorawanTask.h" 
-        "example/lorawan/SCExampleLauncher.cpp" 
-        "example/lorawan/SCExampleLauncher.h" 
-    REQUIRES os lorawan
-       
+        "example/njson/ExampleNJson.cpp" 
+        "example/njson/ExampleNJson.h" 
+
+        REQUIRES nlohmann_json fmt
+        
 )
