--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,7 @@
 idf_component_register(
     SRCS 
         "main.cpp" 
-        "example/njson/ExampleNJson.cpp" 
-        "example/njson/ExampleNJson.h" 
-
-        REQUIRES nlohmann_json fmt
-        
+        "example/simpletask/TestTask.cpp" 
+        "example/simpletask/TestTask.h" 
+    REQUIRES os sys
 )
